--- a/GymBroSERVICE/GymBroSERVICE.csproj
+++ b/GymBroSERVICE/GymBroSERVICE.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\GymBroINFRA\GymBroINFRA.csproj" />
   </ItemGroup>
 
