Crud de Personal finalizado

--- a/GymBroAPI/appsettings.Development.json
+++ b/GymBroAPI/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MySQLConnection": "Server=localhost;Database=gym_bro_v2;User Id=root;Password=987654321abc;"
+    //"MySQLConnection": "Server=localhost;Database=gym_bro_v2;User Id=root;Password=Hu<1dXsCH>EF;",
+    "MySQLConnection": "Server=localhost;Database=gym_bro_v2;User Id=root;Password=Hu<1dXsCH>EF;"
   },
   "Logging": {
     "LogLevel": {
