Geração do token

--- a/GymBroAPI/appsettings.json
+++ b/GymBroAPI/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenConfiguration": {
+    "Audience": "ExempleAudience",
+    "Issuer": "ExempleIssuer",
+    "Secret": "349173D1F42FE215135F2EDF39580362",
+    "Minutes": 525600,
+    "DaysToExpire": 7
+  },
   "AllowedHosts": "*"
 }
