tabela  workout  added. delete do measure  tem  tratamento de  erro.

--- a/GymBroSERVICE/GymBroSERVICE.csproj
+++ b/GymBroSERVICE/GymBroSERVICE.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\GymBroINFRA\GymBroINFRA.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WorkoutService\DTO\Response\" />
+    <Folder Include="WorkoutService\DTO\Request\" />
+  </ItemGroup>
+
 </Project>
